Updated User Model Entity